# SystemTools

./: .gitignore  README.md  analog_input.py  analog_input_project_deneve.py  project_deneve.py  pyproject.toml  pytest.ini  requirements.txt  sim39.yml  system_analysis.py  system_utilities.py  system_viz.py
analysis/: analysis_base_module.py  analysis_module.py  cx_parser_module.py  statistics_module.py
construction/: connection_translation_module.py
context/: context_module.py  context_module_base.py
data_io/: data_io_base_module.py  data_io_module.py
docs/source/: conf.py  data_io.rst  index.rst  introduction.rst  project_conf.rst  reference.rst
iterate/: iterate_module.py
project/: project_base_module.py  project_conf_module.py  project_manager_module.py  project_utilities_module.py  run_script.py
scripts/FCN22/: fcn22_environment_installation_commands_conda.sh  fcn22_environment_installation_commands_conda.txt  figure1.ipynb  figure1B.ipynb  figure1CD.ipynb  figure1CDE.ipynb  figure2.ipynb  figure3AC.ipynb  figure3B.ipynb  figure4.ipynb  figure5.ipynb  figure6AD.ipynb  figure7A.ipynb  figure8.ipynb  requirements.txt  run_one_simulation.ipynb
scripts/FCN22/Figure1/: Anat_Comrad_221122_midpoint.csv  Anat_Comrad_221122_startpoint.csv  Phys_Comrad_221122_midpoint.csv  Phys_Comrad_221122_startpoint.csv
scripts/FCN22/in/: ReadMe.txt  noise_210406_SingleSpike.mat  (+12 more)
tests/: test_systemtools.py
tests/in/: noise_210916_SingleSpike_0_ci.mat.REMOVED.git-id  orig_noise_210916_SingleSpike_0_ci.mat.REMOVED.git-id
viz/: viz_base_module.py  viz_module.py
(+128 files in other folders)
