[tool.poetry]
name = "systemtools"
version = "0.1.0"
description = "SystemTools project for simulating and analysing simple simulations"
authors = ["simo <simo.vanni@helsinki.fi>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
brian2cuda = "^1.0a7"
cxsystem2 = { git = "https://github.com/VisualNeuroscience-UH/CxSystem2.git" }
matplotlib = "^3.9.1"
numpy = "^2.0.1"
pandas = "^2.2.2"
python = ">=3.11,<3.14"
scipy = "^1.14.0"
seaborn = "^0.13.2"
pyqt5 = "^5.15.11"
jupyterlab = "*"
statsmodels = "*"
pyinform = "*"
scikit-learn = "*"
colour-science = "^0.4.6"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"